--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="login-box">
       <h2>Login</h2>
 
-      <input id="username" type="text" placeholder="Username">
-      <input id="password" type="password" placeholder="Password">
+      <input id="username" type="text" placeholder="abc">
+      <input id="password" type="password" placeholder="123">
 
       <button onclick="login()">Login</button>
 
